--- a/dev_cache/cont2css.css
+++ b/dev_cache/cont2css.css
@@ -19,7 +19,7 @@ body {
   line-height: 30px;
 }
 
-.container {
+.contact_container {
 
   width: 100%;
   height: 800px;
@@ -89,14 +89,26 @@ fieldset {
 #contact input[type="text"],
 #contact input[type="email"],
 #contact input[type="tel"],
-#contact input[type="url"],
-#contact textarea {
+#contact input[type="url"]
+ {
   width: 100%;
   border: 1px solid #ccc;
   background: #FFF;
   margin: 0 0 5px;
   padding: 10px;
+  border-radius: 50vh;
 }
+
+#contact textarea{
+  width: 100%;
+  border: 1px solid #ccc;
+  background: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+  border-radius: 10%;
+}
+
+
 
 #contact input[type="text"]:hover,
 #contact input[type="email"]:hover,
@@ -165,8 +177,13 @@ fieldset {
 
 /* Google Maps Iframe */
 
+#map_title{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 #gmap{
-  width: 94%;
+  width: 100%;
   margin: auto 0%;
   
 }
