--- a/dev_cache/about.css
+++ b/dev_cache/about.css
@@ -8,7 +8,6 @@
     width: 30%;
     height: 700px;
     text-align: center;
-    background-color: red;
     float: left;
 }
 
@@ -16,4 +15,12 @@
     float: right;
     width: 100%;
     height: 700px;
+    z-index: 0;
+}
+
+
+
+#graphic1{
+    z-index: 2;
+    float: left;
 }
