--- a/dev_cache/anime.css
+++ b/dev_cache/anime.css
@@ -1,40 +1,42 @@
 .box{
-    display: grid;
-    grid-template-rows: 30% 70%;
+
 }   
    .graphic1{
         height: 700px;
-        width: 100%;
-        background-color: green;
+        width: 30%;
+        background-color: rgb(117, 10, 117);
         left: 0%;
-        grid-row: 1;
-        grid-column: 1;
+        position: relative;
     }
 
     .parent1{
         height: 700px;
-        width: 100%;
+        width: 70%;
         background-color: aqua;
         left: 30%;
-        grid-row: 1;
-        grid-column: 2;
-       
+        top: 0%;
+        position: absolute;
     }
+
+    *{
+        position: unset;
+    }
+
 
     .graphic2{
         height: 700px;
         width: 30%;
         background-color: rebeccapurple;
-       
+        position: relative;
     }
 
     .parent2{
         height: 700px;
         width: 70%;
         background-color: rgb(105, 248, 100);
-        
         left: 30%;
-        top:0;
+        top:725px;
+        position: absolute;
     }
 
     .graphic3{
@@ -48,7 +50,6 @@
         height: 700px;
         width: 70%;
         background-color: rgb(236, 126, 163);
-        
         left: 30%;
         top:0;
     }
