--- a/css/about-us/about-us-style.css
+++ b/css/about-us/about-us-style.css
@@ -6,7 +6,7 @@ img{
     padding: 0%;
     margin: 0%;
 }
-
+/*
 .p1{
     background-color: #4285F4;
     color: black;
@@ -15,13 +15,13 @@ img{
 .p2{
     background-color: #DB4437;
     color: black;
-}
+}*/
 
 .quote_bg{
-    background-color: #F4B400;
+    background-color: rgb(244, 180, 0,0.3);
     color: black;
 }
-
+/*
 .p3{
     background-color: #0F9D58;
     color: black;
@@ -50,19 +50,9 @@ img{
     border-right: 15px solid #DB4437;
     border-top:none;
     border-bottom: 15px solid #DB4437;
-}
+}*/
 
 /* Bootstrap Code edit */
-
-.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col, .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm, .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md, .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg, .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl, .col-xl-auto {
-    position: relative;
-    width: 100%;
-    padding-right: 0px;
-    padding-left: 0px;
-    text-align: center;
-    display: inline block;
-    vertical-align: middle;
-}
 
 .row{
     padding-top: 10px;
@@ -85,3 +75,5 @@ p{
 .para{
     margin: auto 0%;
 }
+
+/* Wobbling Paragraphs */ 
