--- a/formula-bharat-2019/desktop_fb19.css
+++ b/formula-bharat-2019/desktop_fb19.css
@@ -51,10 +51,19 @@
     }
     /* Day  0 : Styling */
 
-    h2{
+    h2,.date{
         font-family: Arial, Helvetica, sans-serif;
     }
-    /* Day 0 : Styling */
 
+    /* Day 0 : Styling */
+    .full{
+        width:100%;
+    }
+    .half{
+        width: 50%;
+    }
+    .line{
+        display: flex;
+    }
 
 }
