--- a/css/about-us/about-us-style.css
+++ b/css/about-us/about-us-style.css
@@ -27,8 +27,9 @@ body{
     filter: blur(3px);
 }
 .onimage{
+    padding-left: 10px;
     position: absolute;
-    padding: auto , auto;
+    width:100%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -77,5 +78,74 @@ p{
 
 /* Mobile CSS */
 @media only screen and (max-width: 600px) {
-       
+   
+body{
+    background: linear-gradient(to Right,#3090C7,rgb(0,0,0,0));
+ }
+ 
+ .parallax {
+     /* The image used */
+     background-image: url("images/about-us/thunderblade-in-race.jpg"),linear-gradient(rgb(0,0,0,0.3),rgb(0,0,0,0.3));
+   
+     /* Set a specific height */
+     width: 100%;
+     height: auto;
+   
+     /* Create the parallax scrolling effect */
+     background-attachment: fixed;
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;
+     position: relative;
+ }
+ 
+ .parallax img{
+     filter: blur(3px);
+ }
+ .onimage{
+     position: absolute;
+     width:100%;
+     top: 10%;
+     left: 25%;
+     transform: translate(-20%, -50%);
+ }
+   
+ .color-white{
+     color: white;
+ }
+ 
+ img{
+     width: 100%;
+     padding: 0%;
+     margin: 0%;
+ }
+ 
+ .quote_bg{
+     background-color: rgb(244, 180, 0,0.3);
+     color: black;
+ }
+ 
+ .row{
+     padding-top: 10px;
+     padding-bottom: 10px;
+ }
+ 
+ .quote{
+     font-family: 'Orbitron', sans-serif;
+     font-size: 20px;
+ }
+ 
+ .vcenter {
+     display: inline-block;
+     vertical-align: middle;
+     float: none;
+ }
+ 
+ p{
+     font-size: 18px;
+ }
+ 
+ .para{
+     margin: auto 0%;
+ }    
 }
