Blanked -> Homepage , Contact us

--- a/css/laurels/laurel_css.css
+++ b/css/laurels/laurel_css.css
@@ -98,3 +98,21 @@
     background: #0F9D58;
 }
   
+
+/* Onimage List */
+.container2 {
+  position: relative; 
+  max-width: 100%; /* Maximum width */
+  margin: 0 auto; /* Center it */
+}
+
+.container2 .content {
+  position: absolute; /* Position the background text */
+  left: 0; /* At the bottom. Use top:0 to append it to the top */
+  top: 0;
+  background: rgb(0, 0, 0); /* Fallback color */
+  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+  color: #f1f1f1; /* Grey text */
+  height: 100%; /* Full width */
+  padding: 0 20px; /* Some padding */
+}
