--- a/css/our-cars/custom_our_cars.css
+++ b/css/our-cars/custom_our_cars.css
@@ -2,7 +2,9 @@ html, body {
     max-width: 100%;
     overflow-x: hidden;
 }
-
+body{
+    overflow-x:hidden;
+}
 center{
     width: 100%;
 }
@@ -43,10 +45,11 @@ body{
 /* Iframe Styling */
 
 #our-cars-iframe , .framebox{
-    min-width: 100%;
-    width: 100%;
     max-width: 100%;
-    overflow-x: hidden;
+    min-width: 100%;
+    height: 2100px;
     overflow: hidden;
-    height: 2000px;
+}
+#our-cars-iframe{
+    overflow:scroll;
 }
