--- a/css/headnav/headnav.css
+++ b/css/headnav/headnav.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: "Batman";
+  src:
+  url("../../font/batman.ttf") format("truetype");
+}
+
+.navbar-brand-title{
+  font-family: "Batman",Arial, sans-serif;
+  font-size: 20px;
+}
+
+@media only screen and (max-width: 600px){
+  .navbar-brand-title{
+    font-size: 17px;
+  }
+}
 .navbar-inverse{
     background:#222B31 !important;
     border-bottom:4px solid #6973A4 !important;
