--- a/css/about-us/about-us-style.css
+++ b/css/about-us/about-us-style.css
@@ -1,13 +1,17 @@
 
 @import url('https://fonts.googleapis.com/css?family=Orbitron');
 
+
+
 @media only screen and (min-width: 950px) {
 /* Desktop CSS */
 
 body{
    background: linear-gradient(to Right,#3090C7,rgb(0,0,0,0));
 }
-
+.bg-dark{
+    background-color: black;
+}
 .parallax {
     /* The image used */
     background-image: url("images/about-us/thunderblade-in-race.jpg"),linear-gradient(rgb(0,0,0,0.3),rgb(0,0,0,0.3));
@@ -93,7 +97,9 @@ p{
 body{
     background: linear-gradient(to Right,#3090C7,rgb(0,0,0,0));
  }
-
+ .bg-dark{
+    background-color: black;
+}
 .navbar-collaps{
     display: flex;
     flex-direction: column;
