--- a/ourCars/cars_comman_style.css
+++ b/ourCars/cars_comman_style.css
@@ -3,6 +3,15 @@
     width: 70%;
 }
 
-table tr{
-    width: 100%;
+table tr td:nth-child(odd){
+    width: 40%;
+}
+
+table tr td:nth-child(even){
+    width: 60%;
+}
+
+
+table{
+    min-width: 100%;
 }
