--- a/css/our-team/style_card.css
+++ b/css/our-team/style_card.css
@@ -3,6 +3,34 @@ body{
     background: linear-gradient(to bottom , rgb(0,0,0,0.7),rgb(0,0,0,0.2));
 }
 
+
+/* Bootstrap Navbar */
+
+.navbar-header {
+    float: none;
+}
+.navbar-toggle {
+    display: block;
+}
+.navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+}
+.navbar-collapse.collapse {
+    display: none!important;
+}
+.navbar-nav {
+    float: none!important;
+    margin: 7.5px -15px;
+}
+.navbar-nav>li {
+    float: none;
+}
+.navbar-nav>li>a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .btn-primary:hover,
     .btn-primary:focus
     {
@@ -119,7 +147,7 @@ body{
     .frontside .card,
     .backside .card
     {
-        min-height: 312px;
+        min-height: 250px;
         
     }
         
@@ -149,3 +177,12 @@ body{
             
         }
 
+/* Desktop CSS */
+@media only screen and (min-width: 600px) {
+    .bigbox{
+        margin-left: 240px;
+    }
+/* Mobile CSS */
+@media only screen and (max-width: 600px) {
+    
+  }
