--- a/css/laurels/laurel_css.css
+++ b/css/laurels/laurel_css.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
+@font-face {
+  font-family: "Batman";
+  src:
+  url("../../font/batman.ttf") format("truetype");
+}
+
 /* Forward */
 
 .list-group-item {
@@ -44,10 +51,13 @@
 /* Competition Name Styling */
 
 .comp_name{
+    font-family: "Batman",Arial, sans-serif;
+    font-size: 20px;
     padding-top: 2.5%;
     padding-bottom: 1%;
     margin-top:0.5%;
     margin-bottom:0.5%;
+    
 }
 
 /* Underline From Left */
@@ -97,7 +107,11 @@
 .comp_name:nth-child(4n+3):before{
     background: #0F9D58;
 }
-  
+
+.bigbox{
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
 
 /* Onimage List */
 .container2 {
