Our Team : JSON Team Description Added

--- a/css/our-team/style_card.css
+++ b/css/our-team/style_card.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Batman";
+    src:
+    url("../../font/batman.ttf") format("truetype");
+}
+
 /* Code for Cards */
 body{
     background: linear-gradient(to bottom , rgb(0,0,0,0.7),rgb(0,0,0,0.2));
@@ -182,7 +188,21 @@ body{
     .bigbox{
         margin-left: 240px;
     }
+}
 /* Mobile CSS */
 @media only screen and (max-width: 600px) {
     
-  }
+}
+
+/* Row Font Change */
+h5{
+    clear: all;
+}
+
+.section-title{
+    font-family: "Batman",Arial, sans-serif;
+}
+
+h5{
+    font-family: "Batman",Arial, sans-serif;
+}
