--- a/Workshop/load/style.css
+++ b/Workshop/load/style.css
@@ -10,8 +10,8 @@ body{
 }
 
 .loading{
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   box-sizing: border-box;
   border-radius: 50%;
   border-top: 10px solid #e74c3c;
@@ -21,8 +21,8 @@ body{
 
 .loading::before,.loading::after{
   content: '';
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   position: absolute;
   left: 0;
   top: -10px;
@@ -42,8 +42,11 @@ body{
 
 .loading .card{
   position: absolute;
-  width: 200px;
-  height: 200px;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 300px;
   color: #fff;
   text-align: center;
   animation: a2 2s linear infinite;
@@ -59,4 +62,50 @@ body{
   to{
     transform: rotate(-360deg);
   }
+}
+
+/* Align for Part 2*/
+
+
+.foading{
+  width: 180px;
+  height: 180px;
+  box-sizing: border-box;
+  border-radius: 50%;
+  border-top: 10px solid #e74c3c;
+  position: relative;
+  animation: a1 2s linear infinite;
+}
+
+.foading::before,.foading::after{
+  content: '';
+  width: 180px;
+  height: 180px;
+  position: absolute;
+  left: 0;
+  top: -10px;
+  box-sizing: border-box;
+  border-radius: 50%;
+}
+
+.foading::before{
+  border-top: 10px solid #e67e22;
+  transform: rotate(120deg);
+}
+
+.foading::after{
+  border-top: 10px solid #3498db;
+  transform: rotate(240deg);
+}
+
+.bard{
+  position: absolute;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  width: 180px;
+  height: 180px;
+  color: #fff;
+  text-align: center;
+  animation: a2 2s linear infinite;
 }
