--- a/css/newswire/newswire_desktop.css
+++ b/css/newswire/newswire_desktop.css
@@ -1,5 +1,7 @@
-@media (min-width:768px){
-  
+@font-face {
+  font-family: "Batman";
+  src:
+  url("../../font/batman.ttf") format("truetype");
 }
 
 .card {
@@ -290,4 +292,91 @@
       margin-bottom: 0;
       margin-left: 15px
   }
+}
+
+.onimage{
+  position: absolute;
+  left:0;
+  right: 0;
+  top:0;
+  bottom: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+}
+
+.card-img-top{
+  z-index: 100;
+}
+
+.card-img-top:hover{
+  opacity: 0.2;
+}
+
+.onimage:hover{
+  display: block;
+}
+
+/* Text Overlay */
+.card {
+  position: relative;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right:0;
+  width: 100%;
+  text-align: center;
+}
+
+.fiddle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right:0;
+  width: 100%;
+  text-align: center;
+}
+  
+.card:hover .image {
+  opacity: 0.3;
+}
+
+.card:hover .middle {
+  opacity: 1;
+}
+
+.card:hover .fiddle {
+  opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+  max-width: 100%;
+} 
+
+.middle .text{
+  font-family: "Batman",Arial, sans-serif;
+  background: linear-gradient(to bottom,black,75%,rgb(0,0,0,0));
+}
+
+.fiddle .text{
+  background: linear-gradient(to top,black,75%,rgb(0,0,0,0));
 }
