--- a/css/spoonsers/spons.css
+++ b/css/spoonsers/spons.css
@@ -1,9 +1,11 @@
+@font-face {
+  font-family: "Batman";
+  src:
+  url("../../font/batman.ttf") format("truetype");
+}
+
 body{
-    background: -moz-linear-gradient(left, rgba(30,87,153,1) 0%, rgba(125,185,232,0.47) 53%, rgba(125,185,232,0) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, rgba(30,87,153,1) 0%,rgba(125,185,232,0.47) 53%,rgba(125,185,232,0) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, rgba(30,87,153,1) 0%,rgba(125,185,232,0.47) 53%,rgba(125,185,232,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#007db9e8',GradientType=1 ); /* IE6-9 */
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 .bigbox{
@@ -11,15 +13,11 @@ body{
     margin-bottom: 50px;
 }
 
-img{
-    max-width: 66%;
-}
-
 .card-img-top{
     border-radius: 50%;
 }
 
-/* Spoonsers Animation */
+/* Spoonsers Animation 
 
 @keyframes a1 {
     to{
@@ -32,7 +30,7 @@ img{
       transform: rotate(-360deg);
     }
   }
-  
+  */
   /* Align for Part 2*/
   
   .img-div{
@@ -79,7 +77,7 @@ img{
     padding: 0 auto;
     align-content: center;
     justify-content: center;
-    width: 100%;
+    width: 95%;
     height: 100%;
     margin: 0 auto;
     color: #fff;
@@ -87,3 +85,10 @@ img{
     animation: a2 2s linear infinite;
   }
   
+  a , .card-body h3 , .card-body h3:hover {
+    text-decoration: none;
+  }
+
+  .batman{
+    font-family: "Batman",Arial, sans-serif;
+  }
