--- a/css/laurels/laurel_css.css
+++ b/css/laurels/laurel_css.css
@@ -6,6 +6,14 @@
 }
 
 /* Forward */
+.comp_name{
+  font-family: "Batman",Arial, sans-serif;
+}
+
+.list-group-item , .list-group-item p{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+}
 
 .list-group-item {
     display: flex;
@@ -20,15 +28,16 @@
   }
 
   .list-group-item {
-  font-size: 15px;
+    font-size: 20px;
     text-decoration: bold;
   }
   .list-group-item:hover, .list-group-item:focus, .list-group-item:active {
     -webkit-transform: translateX(15px);
     transform: translateX(15px);
     text-decoration: bold;
+    font-weight: bold;
     color: white;
-    font-size: 20px;
+    font-size: 23px;
   }
 .list-group-item:nth-child(4n):hover, .list-group-item:nth-child(4n):focus, .list-group-item:nth-child(4n):active {
     background-color: #4285F4;
@@ -47,66 +56,6 @@
     background-color: #0F9D58;
 }
   
-
-/* Competition Name Styling */
-
-.comp_name{
-    font-family: "Batman",Arial, sans-serif;
-    font-size: 20px;
-    padding-top: 2.5%;
-    padding-bottom: 1%;
-    margin-top:0.5%;
-    margin-bottom:0.5%;
-    
-}
-
-/* Underline From Left */
-.comp_name {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    position: relative;
-    overflow: hidden;
-  }
-  .comp_name:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    left: 0;
-    right: 100%;
-    bottom: 0;
-    height: 4px;
-    /*background: #4285F4;*/
-    -webkit-transition-property: right;
-    transition-property: right;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-timing-function: ease-out;
-    transition-timing-function: ease-out;
-  }
-  .comp_name:hover:before, .comp_name:focus:before, .comp_name:active:before {
-    right: 0;
-  }
-
-
-.comp_name:nth-child(4n):before{
-    background: #4285F4;
-}
-  
-.comp_name:nth-child(4n+1):before {
-    background: #DB4437;
-}
-  
-.comp_name:nth-child(4n+2):before{
-    background: #F4B400;
-}
-  
-
-.comp_name:nth-child(4n+3):before{
-    background: #0F9D58;
-}
 
 .bigbox{
   margin-top: 60px;
