--- a/css/about-us/about-us-style.css
+++ b/css/about-us/about-us-style.css
@@ -95,6 +95,25 @@ p{
 /* Mobile CSS */
 @media only screen and (max-width: 600px) {
    
+.normal{
+    font-family: 'Open Sans', sans-serif;
+}
+
+.parallax img{
+    opacity: 0.35;
+}
+
+.onimage{
+    padding-left: 10px;
+    position: absolute;
+    width:100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.color-white{
+    color: white;
+}
 body{
     background: linear-gradient(to Right,#3090C7,rgb(0,0,0,0));
  }
