--- a/css/home/home-style.css
+++ b/css/home/home-style.css
@@ -4,6 +4,19 @@
   url("../../font/batman.ttf") format("truetype");
 }
 
+h5{
+  padding: 0;
+  margin: 0;
+  margin-top: 0;
+  clear: all;
+}
+
+.card{
+  text-align: center;
+  align-content: center;
+  justify-content: center;
+}
+
 body{
   overflow-x: hidden;
   font-family: 'Open Sans', sans-serif;
@@ -32,9 +45,6 @@ body{
   width: 33.33%;
 }
 
-.card img{
-  max-width: 30%;
-}
 
 body{
   max-width: 100%;
@@ -81,9 +91,72 @@ bottom: 0;
 margin: auto;
 }
 @media (max-width:576px) {
+  /* mobile css */
   .carousel-control img{
     width: 30px;
     height: 30px;
+  }
+}
+
+@media (min-width : 600px){
+  /* Desktop CSS */
+  .card img{
+    max-width: 40%;
+  }
+
+  .card-body h5{
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    font-size: 20px;
+  }
+  
+  .card-body{
+    width: 200px;
+     height: 50px;
+     transform: skew(-25deg);
+     margin: 0 auto;
+     margin-top: 10px;
+     padding: 15px 0;
+  }
+  
+  .fcd{
+    background-color: #4285F4;
+  }
+  .scd{
+    background-color: #DB4437;
+  }
+  .tcd{
+    background-color: #0F9D58;
+  }
+}
+
+@media (max-width : 600px){
+  .card img{
+    max-width: 60%;
+  }
+  .card-body h5{
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    font-size: 15px;
+  }
+  
+  .card-body{
+     width: 95%;
+     height: 40px;
+     transform: skew(-15deg);
+     margin: 0 auto;
+     margin-top: 5px;
+     padding: sss2.5px 0;
+  }
+  
+  .fcd{
+    background-color: #4285F4;
+  }
+  .scd{
+    background-color: #DB4437;
+  }
+  .tcd{
+    background-color: #0F9D58;
   }
 }
 /* about us Width */
@@ -98,7 +171,7 @@ margin: auto;
 .card-body{
   left: 0;
   right: 0;
-  padding: 0 auto;
+  margin: 0 auto;
 }
 
 /* Sponsers Card Animation Styling */
