--- a/css/home/home-style.css
+++ b/css/home/home-style.css
@@ -104,19 +104,17 @@ margin: auto;
     max-width: 40%;
   }
 
-  .card-body h5{
+  .fcd h5,.scd h5,.tcd h5{
     font-family: 'Open Sans', sans-serif;
     color: white;
     font-size: 20px;
   }
   
-  .card-body{
-    width: 200px;
+  .fcd,.scd,.tcd{
+     width: 200px;
      height: 50px;
      transform: skew(-25deg);
-     margin: 0 auto;
-     margin-top: 10px;
-     padding: 15px 0;
+     padding: 2.5px 0;
   }
   
   .fcd{
@@ -134,19 +132,19 @@ margin: auto;
   .card img{
     max-width: 60%;
   }
-  .card-body h5{
+  .fcd h5,.scd h5,.tcd h5{
     font-family: 'Open Sans', sans-serif;
     color: white;
     font-size: 15px;
   }
-  
   .card-body{
+    margin-top: 5px;
+  }
+  .fcd,.scd,.tcd{
      width: 95%;
      height: 40px;
      transform: skew(-15deg);
-     margin: 0 auto;
-     margin-top: 5px;
-     padding: sss2.5px 0;
+     padding: 2.5px 0;
   }
   
   .fcd{
@@ -171,7 +169,7 @@ margin: auto;
 .card-body{
   left: 0;
   right: 0;
-  margin: 0 auto;
+  margin: 10px auto 0 auto;
 }
 
 /* Sponsers Card Animation Styling */
