Our Cars : Fonts Added

--- a/css/our-cars/custom_our_cars.css
+++ b/css/our-cars/custom_our_cars.css
@@ -9,6 +9,9 @@ center{
     width: 100%;
 }
 
+#i40,#i31,#i30,#i21,#i20,#i10,button{
+    font-family: 'Open Sans', sans-serif;
+}
 
 .optionbox{
     display: flex;
