--- a/css/our-team/style_card.css
+++ b/css/our-team/style_card.css
@@ -11,6 +11,7 @@ body{
 
 h5,.section-title{
     font-family: "Batman",Arial, sans-serif;
+    color: white;
 }
 /* Bootstrap Navbar */
 
@@ -62,8 +63,9 @@ h5,.section-title{
         
         section .section-title
         {
+            font-family: "Batman",Arial, sans-serif;
             text-align: center;
-            color: #305893;
+            color: #fff;
             margin-bottom: 50px;
             text-transform: uppercase;
         }
