--- a/css/events/fb18-css/main.css
+++ b/css/events/fb18-css/main.css
@@ -262,8 +262,8 @@ textarea {
 	color: #FFF; 
 	max-width: 46%; 
 	position: absolute;
-	top: 0;
-	left: 0;
+	/*top: 0;
+	left: 0;*/
 	text-align: right;
 	z-index: 250;  
 }
@@ -572,12 +572,12 @@ textarea {
 
 .decade .inner img{
 	position: absolute;
-	right: 0;
+	/*right: 0;
 	left: 0;
 	margin: auto;
 	top: 0;
-	bottom: 0;
-	max-width: 100%;
+	bottom: 0;*/
+	max-width: 50%;
 }
 
 
