--- a/css/events/events-nav.css
+++ b/css/events/events-nav.css
@@ -4,11 +4,18 @@
     url("../../font/batman.ttf") format("truetype");
 }
 
-.batman{
+.inner > div > h3{
+    font-family: "Batman",Arial, sans-serif;
+}
+
+.inner > div > p{
+    font-family: 'Open Sans', sans-serif;
+}
+
+.batman,header > h1{
     font-family: "Batman",Arial, sans-serif;
     font-size: 20px;
 }
-
 @media (min-width:768px) {
     .page .container{
         top : 60px;
@@ -66,10 +73,11 @@
     }
     .inner img{
         max-width: 50%;
+        height: 250px;
     }
     .mp5-p-bottom-full{
         margin: 0 auto;
-        margin-top: 320px;
+        margin-top: 280px;
         color: #fff;
         width: 96%;
     }
@@ -140,5 +148,23 @@
         z-index: -1;
         position: absolute;
         
+    }
+}
+
+@media (min-width:900px) {
+    .inner{
+        margin-top: 5px;
+    }
+    .px80{
+        position: absolute;
+        min-height: 0px;
+        bottom: 10px;
+        top: 230px;
+        width: 100%;
+        max-width: 1200px;
+        left: 0;
+        right: 0;
+        z-index: 10
+        margin-top: -80px;
     }
 }
