--- a/css/events/fb18-css/main.css
+++ b/css/events/fb18-css/main.css
@@ -284,7 +284,7 @@ textarea {
 	margin-top: 185px;
 }
 .decades .fact p{
-	font-family: 'ff-tisa-web-pro', serif;
+	/*font-family: 'ff-tisa-web-pro', serif;*/
 	font-weight: 400;
 	font-style: italic; 
 	font-size: 18px;
