--- a/css/events/sae-2018-css/main.css
+++ b/css/events/sae-2018-css/main.css
@@ -209,7 +209,7 @@ textarea {
 	max-width: 1200px;
 	left: 0;
 	right: 0;
-	margin: 0 auto;
+	margin: 5px auto 0 auto;
 	z-index: 10; 
 }
 
@@ -284,7 +284,7 @@ textarea {
 	margin-top: 185px;
 }
 .decades .fact p{
-	font-family: 'ff-tisa-web-pro', serif;
+	
 	font-weight: 400;
 	font-style: italic; 
 	font-size: 18px;
