--- a/css/footer/foot_css.css
+++ b/css/footer/foot_css.css
@@ -54,7 +54,7 @@ textarea {
 }
 
 .rounded-social-buttons .social-button.facebook {
-  background: #3b5998;
+  background: #ffffff;
 }
 
 .rounded-social-buttons .social-button.facebook:hover, .rounded-social-buttons .social-button.facebook:focus {
@@ -105,7 +105,7 @@ textarea {
 
 .containernbs{
   width: 100%;
-  height: 50px;
+  height: 58px;
   background-color: #101010;
   border-top: 5px solid #125688;
   color: white;
@@ -131,10 +131,33 @@ textarea {
   background: url(../../images/home/SlideShow/left.png);
 }
 
+.link-f{
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 20px;
+  color: #fff;
+}
+
+.social-button img{
+  width: 48px;
+  height: 48px;
+}
+.right_foot p{
+  padding: 0;
+  margin-top: 10px;
+}
 @media only screen and (max-width: 600px) {
   .containernbs{
     display: flex;
     flex-direction: column;
-    height: 80px;
+    height: 100px;
   }
+  .right_foot p{
+    padding: 0;
+    margin: 0;
+  }
+  .right_foot{
+    text-align: center;
+  }
+
 }
