--- a/css/footer/foot_css.css
+++ b/css/footer/foot_css.css
@@ -27,8 +27,8 @@ textarea {
   display: inline-block;
   position: relative;
   cursor: pointer;
-  width: 3.125rem;
-  height: 3.125rem;
+  width: 48px;
+  height: 48px;
   border: 0.125rem solid transparent;
   padding: 0;
   text-decoration: none;
@@ -144,7 +144,7 @@ textarea {
 }
 .right_foot p{
   padding: 0;
-  margin-top: 10px;
+  margin-top: 0px;
 }
 @media only screen and (max-width: 600px) {
   .containernbs{
