--- a/css/events/events-nav.css
+++ b/css/events/events-nav.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "Batman";
+    font-family: "Batman";0
     src:
     url("../../font/batman.ttf") format("truetype");
 }
@@ -18,7 +18,7 @@
 }
 @media (min-width:768px) {
     .page .container{
-        top : 60px;
+        top : 50px;
     }
 }
 
