--- a/css/our-cars/custom_our_cars.css
+++ b/css/our-cars/custom_our_cars.css
@@ -18,6 +18,7 @@ center{
     flex-direction: row;
     width:100%;
     text-align: center;
+    background: linear-gradient(black,rgb(0,0,0,0));
 }
 
 .optionbox button{
@@ -45,21 +46,31 @@ body{
     margin-top: 50px;
 }
 
+.optionbox button div{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+}
+
 /* Iframe Styling */
 
 @media screen and (min-width: 480px) {
     #our-cars-iframe , .framebox{
         max-width: 100%;
         min-width: 100%;
-        height: 2300px;
+        height: 2500px;
         overflow: hidden;
+    }
+    .optionbox button{
+        transform: skew(-15deg);
+        border-radius: 10px;
     }
 }
 @media screen and (max-width: 480px) {
     #our-cars-iframe , .framebox{
         max-width: 100%;
         min-width: 100%;
-        height: 2300px;
+        height: 3000px;
         overflow: hidden;
     }
+    
 }
