Our Team : Navbar Fixing Done

--- a/css/events/fb18-css/main.css
+++ b/css/events/fb18-css/main.css
@@ -2,6 +2,12 @@
    HTML5 Boilerplate
    ========================================================================== */
 
+/* Custom CSS */
+
+.img-full-size{
+	height: 350px;
+}
+
 html,
 body,
 button,
